// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__filename-and-__dirname.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  __filename: "<rootDir>/src/test_fixtures/scripts/__filename-and-__dirname.js"
  __dirname: "<rootDir>/src/test_fixtures/scripts"
}
{
  __filename: "<rootDir>/src/test_fixtures/scripts/__filename-and-__dirname-2.js"
  __dirname: "<rootDir>/src/test_fixtures/scripts"
}
",
}
`;

exports[`__filename-and-__dirname-2.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`http-import-error.js 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: Failed to load module (httpStatusCode = 404, url = "http://suchipi.com/there-is-nothing-at-this-path")
  at somewhere
{
  httpStatusCode: 404
  url: "http://suchipi.com/there-is-nothing-at-this-path"
  httpResponseHeaders: <redacted>
  httpResponseBody: <redacted>
}
",
  "stdout": "",
}
`;

exports[`https-import-error.js 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: Failed to load module (httpStatusCode = 404, url = "https://suchipi.com/there-is-nothing-at-this-path")
  at somewhere
{
  httpStatusCode: 404
  url: "https://suchipi.com/there-is-nothing-at-this-path"
  httpResponseHeaders: <redacted>
  httpResponseBody: <redacted>
}
",
  "stdout": "",
}
`;

exports[`importing-from-npm-protocol.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  Null prototype
  Sealed
  
  Component: Function {}
  Fragment: Function {}
  cloneElement: Function {}
  createContext: Function {}
  createElement: Function {}
  createRef: Function {}
  default: null
  h: -> {root}.createElement
  hydrate: Function {}
  isValidElement: Function {}
  options: {
    __e: Function {}
  }
  render: Function {}
  toChildArray: Function {}
}
",
}
`;

exports[`importing-json.js 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  hello: "there"
}
",
}
`;

exports[`npm-proto-import-error.js 1`] = `
{
  "code": 1,
  "error": false,
  "stderr": "Error: Failed to load module (httpStatusCode = 404, url = "https://cdn.skypack.dev/@suchipi/this-package-does-not-exist")
  at somewhere
{
  httpStatusCode: 404
  url: "https://cdn.skypack.dev/@suchipi/this-package-does-not-exist"
  httpResponseHeaders: <redacted>
  httpResponseBody: <redacted>
}
",
  "stdout": "",
}
`;

exports[`some-coffeescript.coffee 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "object
object
false
",
}
`;

exports[`some-json.json 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "",
}
`;

exports[`some-jsx.jsx 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  $$typeof: Symbol(JSX.Element)
  type: "a"
  props: null
  key: null
}
true
false
true
false
false
",
}
`;

exports[`some-tsx.tsx 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  $$typeof: Symbol(JSX.Element)
  type: "a"
  props: null
  key: null
}
true
false
true
false
false
",
}
`;

exports[`some-typescript.ts 1`] = `
{
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "undefined
object true
path: <rootDir>/src/test_fixtures/scripts
<rootDir>/src/test_fixtures/scripts
",
}
`;
